# terraform-provider-rust

./: .gitignore  Cargo.toml  README.md  build.rs
_examples/: test.tf
src/: main.rs  server.rs
