[package]
name = "terraform-provider-rust"
version = "0.1.0"
authors = ["Alex Somesan <alex.somesan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.3", features = ["full"] }

[build-dependencies]
tonic-build = "0.3"