[package]
name = "terraform-provider-rust"
version = "0.1.0"
authors = ["Alex Somesan <alex.somesan@gmail.com>"]
edition = "2018"

[net]
git-fetch-with-cli = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.2"
prost = "0.9.0"
tokio = { version = "1.15.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.6.2"