[package]
name = "terraform-provider-rust"
version = "0.1.0"
authors = ["Alex Somesan <alex.somesan@gmail.com>"]
edition = "2018"

# [net]
# git-fetch-with-cli = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terraform-plugin  = {path = "../terraform-plugin"}